--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -68,6 +68,11 @@ $(".movebottom").on("click", function() {
                                 Linhas
                             </a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("linha-dia") ?>">
+                                Horários
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="<?= $this->baseUrl("concessaotrajeto") ?>">
                                 Concessões
