--- a/application/views/scripts/funcionario/index.phtml
+++ b/application/views/scripts/funcionario/index.phtml
@@ -29,7 +29,7 @@
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Salario</label>
                                 <div class="col-xs-9">
-                                    <input class="form-control" type="number" value="998" min="998" max="10000" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" id="salario" required>
+                                    <input   class="form-control" type="number" value="998" min="998" max="10000" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" id="salario" required>
                                 </div>
                             </div>
                                          
@@ -38,49 +38,49 @@
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Nome</label>
                                 <div class="col-xs-9">
-                                    <input class="form-control" type="text" placeholder="Digite o nome" id="nome" name="nome" required>
+                                    <input   class="form-control" type="text" placeholder="Digite o nome" id="nome" name="nome" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Data de Nascimento</label>
                                 <div class="col-xs-9">
-                                    <input type="date" name="dataN" id="dataN" class="form-control" placeholder="dd/mm/aaaa" required>
+                                    <input   type="date" name="dataN" id="dataN" class="form-control" placeholder="dd/mm/aaaa" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">CPF</label>
                                 <div class="col-xs-9">
-                                <input type="text" name="cpf" id="cpf" placeholder="XXX.XXX.XXX-XX" class="form-control" required>
+                                <input   type="text" name="cpf" id="cpf" placeholder="XXX.XXX.XXX-XX" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">RG</label>
                                 <div class="col-xs-9">
-                                <input type="text" name="rg" id="rg" placeholder="XXXXXXXXXX" class="form-control" required>
+                                <input   type="text" name="rg" id="rg" placeholder="XXXXXXXXXX" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">CTPS</label>
                                 <div class="col-xs-9">
-                                    <input type="text" name="ctps" id="ctps" placeholder="Número Série UF" class="form-control" required>
+                                    <input   type="text" name="ctps" id="ctps" placeholder="Número Série UF" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">PIS</label>
                                 <div class="col-xs-9">
-                                    <input type="text" name="pis" id="pis" placeholder="XXX.XXXXX.XX-X" class="form-control" required>
+                                    <input   type="text" name="pis" id="pis" placeholder="XXX.XXXXX.XX-X" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">CNH</label>
                                 <div class="col-xs-9">
-                                    <input type="text" name="cnh" id="cnh" placeholder="XXXXXXXXXXX" class="form-control" required>
+                                    <input   type="text" name="cnh" id="cnh" placeholder="XXXXXXXXXXX" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Telefone</label>
                                 <div class="col-xs-9">
-                                    <input type="text" name="telefone" id="telefone" placeholder="(XX)XXXXX-XXXX"class="form-control" required>
+                                    <input   type="text" name="telefone" id="telefone" placeholder="(XX)XXXXX-XXXX"class="form-control" required>
                                 </div>
                             </div>
                             <br>
@@ -99,13 +99,13 @@
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">E-mail</label>
                                 <div class="col-xs-9">
-                                    <input type="text" name="email" id="email" placeholder="nome@mail.com" class="form-control" required>
+                                    <input   type="text" name="email" id="email" placeholder="nome@mail.com" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Data de Admissão</label>
                                 <div class="col-xs-9">
-                                    <input type="date" name="dataAdmissao" id="dataAdmissao" placeholder="dd/mm/aaaa" class="form-control" required>
+                                    <input   type="date" name="dataAdmissao" id="dataAdmissao" placeholder="dd/mm/aaaa" class="form-control" required>
                                 </div>
                             </div>                         
                             <div class="form-group form-control-sm row">
@@ -118,8 +118,8 @@
                                             Selecionar
                                         </span>
                                     </div>
-                                    <input type="hidden" id="id-cidade">
-                                    <input type="text" class="form-control" disabled id="nome-cidade">
+                                    <input   type="hidden" id="id-cidade">
+                                    <input   type="text" class="form-control" disabled id="nome-cidade">
                                 </div>
                                 </a>
 
@@ -128,19 +128,19 @@
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Endereço</label>
                                 <div class="col-xs-9">
-                                    <input class="form-control" name="endereco" id="endereco" type="text" maxlength="30" placeholder="Digite o endereço" required>
+                                    <input   class="form-control" name="endereco" id="endereco" type="text" maxlength="30" placeholder="Digite o endereço" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Numero da casa</label>
                                 <div class="col-xs-9">
-                                    <input class="form-control" name="numCasa" id="numCasa" type="number" min="0" required>
+                                    <input   class="form-control" name="numCasa" id="numCasa" type="number" min="0" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Bairro</label>
                                 <div class="col-xs-9">
-                                    <input class="form-control" name="bairro" id="bairro" type="text" maxlength="30" placeholder="Digite o bairro" required>
+                                    <input   class="form-control" name="bairro" id="bairro" type="text" maxlength="30" placeholder="Digite o bairro" required>
                                 </div>
                             </div>
 
@@ -149,25 +149,25 @@
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Nome de usuário</label>
                                 <div class="col-xs-9">
-                                    <input class="form-control" type="text" maxlength="15" placeholder="Digite o usuário" id="usuario" name="usuario" required>
+                                    <input   class="form-control" type="text" maxlength="15" placeholder="Digite o usuário" id="nome_usuario" name="nome_usuario" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Senha</label>
                                 <div class="col-xs-9">
-                                <input type="password" name="senha" id="senha" maxlength="30" placeholder="Sua senha" class="form-control" required>
+                                <input   type="password" name="senha" id="senha" maxlength="30" placeholder="Sua senha" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Confirme a senha</label>
                                 <div class="col-xs-9">
-                                <input type="password"  id="senha1" maxlength="30" placeholder="Sua senha denovo" class="form-control" required>
+                                <input   type="password"  id="senha1" maxlength="30" placeholder="Sua senha denovo" class="form-control" required>
                                 </div>
                             </div>
                             <br>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <button type="button" for="exampleFormControlFile1" class="btn btn-success btn-sm btn-block cadastrar-funcionario" >Pronto</button>
+                                    <button type="button" class="btn btn-success btn-sm btn-block cadastrar-funcionario"> Pronto </button>
                                 </div>
                                 <div class="col-sm-6">
                                     <button type="reset" class="btn btn-warning btn-sm btn-block" >Limpar campos</button> 
