--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -57,6 +57,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("linha") ?>">
+                                Linhas
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="<?= $this->baseUrl("manutencao") ?>">
                                 Manutenção
                             </a>
