Corrigindo o Id da id_cidade na view

--- a/application/views/scripts/funcionario/index.phtml
+++ b/application/views/scripts/funcionario/index.phtml
@@ -118,7 +118,7 @@
                                             Selecionar
                                         </span>
                                     </div>
-                                    <input   type="hidden" id="id-cidade">
+                                    <input   type="hidden" id="id_cidade">
                                     <input   type="text" class="form-control" disabled id="nome-cidade">
                                 </div>
                                 </a>
