--- a/application/views/scripts/linha/index.phtml
+++ b/application/views/scripts/linha/index.phtml
@@ -1,4 +1,4 @@
-  
+<img src="<?= $this->baseUrl("dist/img/loading.gif") ?>" class="img-loading hidden" alt="carregando...">
 
 <div class="container">
     <div class="row">
