--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -41,14 +41,9 @@
                                 Ônibus <u>I</u>ntermunicipais</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" title="(Alt+n) Visualizar Ônibus Urbanos" href="<?= $this->baseUrl("cobrador") ?>">
+                            <a class="nav-link" title="(Alt+n) Visualizar Funcionários" href="<?= $this->baseUrl("funcionario") ?>">
                                 <i class="fas fa-user"></i>
-                                Cobradores</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("motorista") ?>">
-                                <i class="fas fa-user"></i>
-                                Motoristas</a>
+                                Funcionários</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("parada-onibus") ?>">
