--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -35,6 +35,16 @@
             </a>
         </div>
         <div class="col-lg-2">
+            <a href="<?= $this->baseUrl('funcionario') ?>" accesskey="a" style="text-decoration: none;">
+                <button class="btn btn-success btn-block btn-labeled" title="">
+                    <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
+                    <h6>
+                        <u>R</u>ecursos Humanos
+                    </h6>
+                </button>
+            </a>
+        </div>
+        <div class="col-lg-2">
             <a href="<?= $this->baseUrl('cadastro-estudante') ?>" accesskey="a" style="text-decoration: none;">
                 <button class="btn btn-success btn-block btn-labeled" title="">
                     <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
